# clip-creator

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.claude/commands/: commit.md
clip_creator/: __init__.py  cli.py  config.py  cutter.py  intro_detector.py  jingle_detector.py  llm_client.py  models.py  pipeline.py  segment_selector.py  transcriber.py
docs/design/: card-1-segment-selection.md  segment-selection.md
tasks/backlog/: chat-interpreter.md  clip-evaluator.md
tasks/done/: 1-segment-selection.md
tasks/todo/: 1-segment-selection.md  2-clip-cutting.md  3-vertical-conversion.md  4-subtitle-burnin.md  5-whatsapp-delivery.md
